add more test cases